<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.upload.UploadActivity">
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/top_layout">
       <EditText
           android:id="@+id/subject_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="20dp"
           android:background="@drawable/edit_text_bg"
           android:padding="20dp"
           android:hint="@string/enter_subject_name"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"/>
       <Button
           android:id="@+id/get_docs"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="20dp"
           app:layout_constraintTop_toBottomOf="@+id/subject_name"
           app:layout_constraintEnd_toEndOf="parent"
           android:backgroundTint="@color/teal_200"
           android:textColor="@color/white"
           android:text="@string/select_documents"
           android:textSize="12sp"/>
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/documents_recyclerview"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           app:layout_constraintTop_toBottomOf="@+id/get_docs"
           app:layout_constraintBottom_toTopOf="@+id/upload_subjects"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:clipToPadding="false"
           android:padding="8dp"
           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
       <Button
           android:id="@+id/update_subjects"
           android:layout_width="0dp"
           android:layout_height="56dp"
           android:text="@string/update_subject"
           android:textColor="@color/white"
           android:layout_margin="8dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toStartOf="@id/guideline1"/>
       <Button
           android:id="@+id/upload_subjects"
           android:layout_width="0dp"
           android:layout_height="56dp"
           android:text="@string/upload_subjects"
           android:textColor="@color/white"
           android:layout_margin="8dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toEndOf="@id/guideline1"
           app:layout_constraintEnd_toEndOf="parent"/>

       <androidx.constraintlayout.widget.Guideline
           android:id="@+id/guideline1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintGuide_percent="0.5"/>
   </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        tools:visibility="visible">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:layout_margin="8dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">
                <ProgressBar
                    android:id="@+id/dialog_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:indeterminateTint="@color/purple_500"
                    />
                <TextView
                    android:id="@+id/dialog_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/dialog_progress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/black"
                    android:layout_margin="8dp"
                    android:textSize="16sp"
                    android:text="@string/files_uploading_please_wait"
                    android:textAlignment="center"
                    />
                <Button
                    android:id="@+id/dialog_okay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/okay"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:backgroundTint="@color/teal_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="@+id/dialog_text"
                    app:layout_constraintTop_toBottomOf="@id/dialog_text"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>