<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.admin.AdminLogin">

    <ImageView
        android:id="@+id/loginimage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_shelves"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        />
    <EditText
        android:id="@+id/admin_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/edit_text_bg"
        android:textColor="@color/black"
        android:hint="@string/enter_admin_username"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_below="@id/loginimage"
        />
    <EditText
        android:id="@+id/admin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_admin_password"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_below="@id/admin_email"
        />
    <Button
        android:id="@+id/admin_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/teal_200"
        android:textColor="@color/white"
        android:text="@string/login_as_admin"
        android:textSize="16sp"
        tools:alpha="0.2"
        android:textAllCaps="false"
        android:layout_below="@id/admin_password"
         />
    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:padding="20dp"
        android:visibility="gone"
        android:alpha="0.8"
        android:background="@color/white"
        tools:visibility="visible">
        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>


</RelativeLayout>